@@ -1,3 +1,8 @@
+2010-12-12  6.6.6-6 Glenn Randers-Pehrson <glennrp@image...>
+  * Eliminated a redundant quantization step in the PNG encoder.
+    Untangled a confusing but apparently harmless improper loop nesting
+    in the PNG encoder.
+
 2010-12-10  6.6.6-5 Glenn Randers-Pehrson <glennrp@image...>
   * Make the PNG encoder always rebuild the palette, to avoid losing
     transparency when it is out of sync with the pixel data (reference
